删除多余代码